--- a/laiqu/src/main/res/values/dimens.xml
+++ b/laiqu/src/main/res/values/dimens.xml
@@ -164,5 +164,6 @@
     <dimen name="dimen_3000px">3000px</dimen>
     <dimen name="dimen_128px">128px</dimen>
     <dimen name="dimen_650px">650px</dimen>
+    <dimen name="dimen_57px">57px</dimen>
 
 </resources>
