--- a/laiqu/src/main/res/layout/comui_tab_view.xml
+++ b/laiqu/src/main/res/layout/comui_tab_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -11,14 +10,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:scaleType="center"/>
+        android:scaleType="center" />
 
     <TextView
         android:id="@+id/tab_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dip"
+        android:layout_marginBottom="@dimen/dimen_20px"
         android:textColor="@color/tab_text_normal"
-        android:textSize="9.0sp"/>
+        android:textSize="@dimen/dimen_37px" />
 
 </LinearLayout>
