--- a/laiqu/src/main/res/layout/fragment_person_logged_header.xml
+++ b/laiqu/src/main/res/layout/fragment_person_logged_header.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/fragment_person_logged_head_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/red_bg"
+    android:orientation="vertical"
     android:tag="已经登录下显示"
-    android:visibility="gone"
-    android:id="@+id/fragment_person_logged_head_layout"
-    android:orientation="vertical">
+    android:visibility="gone">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_350px"
@@ -42,55 +42,93 @@
             android:id="@+id/fragment_person_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/profile_image"
-            android:textSize="@dimen/dimen_60px"
-            android:layout_marginLeft="@dimen/dimen_40px"
-            android:drawablePadding="@dimen/dimen_20px"
-            android:gravity="center_horizontal"
-            android:layout_below="@+id/fragment_person_seting"
             android:layout_alignBaseline="@+id/profile_image"
-            android:textColor="@color/white"
+            android:layout_below="@+id/fragment_person_seting"
+            android:layout_marginLeft="@dimen/dimen_40px"
+            android:layout_toRightOf="@id/profile_image"
+            android:drawablePadding="@dimen/dimen_20px"
             android:drawableRight="@mipmap/ic_vip_1"
-            android:text="王大锤" />
+            android:gravity="center_horizontal"
+            android:text="王大锤"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_57px" />
 
         <LinearLayout
             android:id="@+id/fragment_person_vip_layout"
-            android:layout_marginTop="@dimen/dimen_10px"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimen_65px"
             android:layout_alignLeft="@+id/fragment_person_name"
             android:layout_below="@+id/fragment_person_name"
-            android:layout_alignRight="@+id/fragment_person_name"
-            android:layout_width="wrap_content"
-            android:orientation="horizontal"
-            android:layout_height="@dimen/dimen_65px">
+            android:layout_marginTop="@dimen/dimen_10px"
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/fragment_person_vip_targ"
                 android:layout_width="wrap_content"
-                android:text="金牌会员"
-                android:background="@drawable/fragment_person_vip_targ_background"
-                android:textSize="@dimen/dimen_38px"
-                android:textColor="@color/white"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:drawableStart="@mipmap/ic_gold_medal"
-                android:drawableLeft="@mipmap/ic_gold_medal"
+                android:layout_marginRight="@dimen/dimen_15px"
+                android:background="@drawable/fragment_person_vip_targ_background"
                 android:gravity="center"
-                android:drawableEnd="@mipmap/ic_right_arrows"
-                android:drawableRight="@mipmap/ic_right_arrows"
-                android:layout_height="wrap_content" />
+                android:paddingBottom="@dimen/dimen_10px"
+                android:paddingLeft="@dimen/dimen_15px"
+                android:paddingRight="@dimen/dimen_15px"
+                android:paddingTop="@dimen/dimen_10px"
+                android:text="金牌会员"
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimen_40px" />
+
+            <TextView
+                android:id="@+id/fragment_person_partner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="@dimen/dimen_15px"
+                android:layout_marginRight="@dimen/dimen_15px"
+                android:background="@drawable/fragment_person_vip_targ_background"
+                android:contentDescription="合伙人"
+                android:gravity="center"
+                android:paddingBottom="@dimen/dimen_10px"
+                android:paddingLeft="@dimen/dimen_15px"
+                android:paddingRight="@dimen/dimen_15px"
+                android:paddingTop="@dimen/dimen_10px"
+                android:text="@string/partner"
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimen_40px" />
+
+            <TextView
+                android:id="@+id/fragment_person_super_foodie"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="@dimen/dimen_15px"
+                android:layout_marginRight="@dimen/dimen_15px"
+                android:background="@drawable/fragment_person_vip_targ_background"
+                android:contentDescription="超级吃货"
+                android:gravity="center"
+                android:paddingBottom="@dimen/dimen_10px"
+                android:paddingLeft="@dimen/dimen_15px"
+                android:paddingRight="@dimen/dimen_15px"
+                android:paddingTop="@dimen/dimen_10px"
+                android:text="@string/super_foodie"
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimen_40px" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/fragment_person_account_management"
-            android:text="@string/account_management"
-            android:textColor="@color/white"
-            android:contentDescription="帐号管理"
-            android:textSize="@dimen/dimen_50px"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/fragment_person_seting"
             android:layout_alignRight="@+id/fragment_person_seting"
+            android:layout_below="@+id/fragment_person_seting"
             android:layout_marginTop="@dimen/dimen_50px"
+            android:contentDescription="帐号管理"
             android:drawableRight="@mipmap/ic_right_arrows"
+            android:text="@string/account_management"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_50px"
+            android:visibility="gone"
 
             />
     </RelativeLayout>
