--- a/fanqu/src/main/res/layout/fragment_authenticating_layout.xml
+++ b/fanqu/src/main/res/layout/fragment_authenticating_layout.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <com.qbgg.cenglaicengqu.main.widget.ExpendStepView
+        <com.fanqu.main.widget.ExpendStepView
             android:id="@+id/certification_stepview"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_250px"
