--- a/fanqu/src/main/res/values/attrs.xml
+++ b/fanqu/src/main/res/values/attrs.xml
@@ -157,4 +157,10 @@
         <attr name="civ_border_overlay" format="boolean"/>
         <attr name="civ_fill_color" format="color"/>
     </declare-styleable>
+
+    <attr name="visible_tab_count" format="integer" />
+
+    <declare-styleable name="ViewPagerIndicator">
+        <attr name="visible_tab_count" />
+    </declare-styleable>
 </resources>
