--- a/fanqu/src/main/res/layout/activity_login_register_layout.xml
+++ b/fanqu/src/main/res/layout/activity_login_register_layout.xml
@@ -11,6 +11,7 @@
         android:layout_height="@dimen/dimen_600px"
         android:background="@mipmap/login_register_background">
 
+
         <com.fanqu.main.widget.ViewPagerIndicator
             android:id="@+id/id_indicator"
             android:layout_width="match_parent"
@@ -23,10 +24,19 @@
         </com.fanqu.main.widget.ViewPagerIndicator>
 
         <ImageView
+            android:id="@+id/app_ic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:src="@mipmap/ic_fanqu_log" />
+
+        <View
+            android:layout_width="@dimen/dimen_3px"
+            android:layout_height="@dimen/dimen_60px"
+            android:layout_below="@id/app_ic"
+             android:layout_marginTop="@dimen/dimen_40px"
+            android:layout_centerInParent="true"
+            android:background="@color/red_bg"></View>
     </RelativeLayout>
 
     <android.support.v4.view.ViewPager
@@ -90,7 +100,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawablePadding="10dp"
-                    android:drawableTop="@mipmap/share_from_html_weixing"
+                    android:drawableTop="@mipmap/ic_share_from_html_weixing"
                     android:gravity="center"
                     android:text="@string/wechat_name"
                     android:textColor="@color/textGrayMiddle"
@@ -102,7 +112,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="39dp"
                     android:drawablePadding="10dp"
-                    android:drawableTop="@mipmap/share_from_html_qq_friends"
+                    android:drawableTop="@mipmap/ic_share_from_html_qq_friends"
                     android:gravity="center"
                     android:text="@string/qq_name"
                     android:textColor="@color/textGrayMiddle"
