--- a/fanqu/src/main/res/layout/activity_mine_property_layout.xml
+++ b/fanqu/src/main/res/layout/activity_mine_property_layout.xml
@@ -94,27 +94,183 @@
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/nice_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
-
-                    android:layout_marginRight="@dimen/dimen_40px"
+                    android:background="@drawable/fragment_person_mine_dinner_select"
+                    android:clickable="true"
                     android:drawablePadding="@dimen/dimen_20px"
                     android:drawableRight="@mipmap/icon_right_arrows_gray"
+                    android:paddingBottom="@dimen/dimen_40px"
+                    android:paddingLeft="@dimen/dimen_40px"
+                    android:paddingRight="@dimen/dimen_40px"
+                    android:paddingTop="@dimen/dimen_40px"
                     android:text="王大锤"
                     android:textColor="@color/textGrayLight"
                     android:textSize="@dimen/dimen_40px" />
             </RelativeLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_240px"
                 android:layout_marginTop="@dimen/dimen_30px"
                 android:background="@color/white"
                 android:orientation="horizontal">
 
-            </LinearLayout>
+                <ImageView
+                    android:id="@+id/mine_property_balance_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dimen_60px"
+                    android:layout_marginTop="@dimen/dimen_40px"
+                    android:src="@mipmap/ic_balance" />
+
+                <TextView
+                    android:id="@+id/mine_property_balance_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/mine_property_balance_image"
+                    android:layout_marginLeft="@dimen/dimen_40px"
+                    android:layout_toRightOf="@id/mine_property_balance_image"
+                    android:text="@string/balance"
+                    android:textColor="@color/textGrayDeep"
+                    android:textSize="@dimen/dimen_47px" />
+
+                <TextView
+                    android:id="@+id/mine_property_balance_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@id/mine_property_balance_text"
+                    android:layout_below="@id/mine_property_balance_text"
+                    android:layout_marginTop="@dimen/dimen_20px"
+                    android:text="￥ 200.00"
+                    android:textColor="@color/textGrayLight"
+                    android:textSize="@dimen/dimen_40px" />
+
+                <View
+                    android:id="@+id/mine_property_line1"
+                    android:layout_width="@dimen/dimen_3px"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:layout_marginBottom="@dimen/dimen_40px"
+                    android:layout_marginTop="@dimen/dimen_40px"
+                    android:background="@color/edit_publis_line_color"></View>
+
+                <ImageView
+                    android:id="@+id/mine_property_bank_card_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dimen_60px"
+                    android:layout_marginTop="@dimen/dimen_40px"
+                    android:layout_toRightOf="@id/mine_property_line1"
+                    android:src="@mipmap/ic_bank_card" />
+
+                <TextView
+                    android:id="@+id/mine_property_bank_card_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/mine_property_bank_card_image"
+                    android:layout_marginBottom="@dimen/dimen_5px"
+                    android:layout_marginLeft="@dimen/dimen_40px"
+                    android:layout_toRightOf="@id/mine_property_bank_card_image"
+                    android:text="@string/bank_card"
+                    android:textColor="@color/textGrayDeep"
+                    android:textSize="@dimen/dimen_47px" />
+
+                <TextView
+                    android:id="@+id/mine_property_bank_card_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/mine_property_balance_amount"
+                    android:layout_alignLeft="@id/mine_property_bank_card_text"
+                    android:layout_alignTop="@id/mine_property_balance_amount"
+                    android:layout_below="@id/mine_property_bank_card_text"
+                    android:text="1 张"
+                    android:textColor="@color/textGrayLight"
+                    android:textSize="@dimen/dimen_40px" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_240px"
+                android:layout_marginTop="@dimen/dimen_30px"
+                android:background="@color/white"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/mine_property_integral_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dimen_60px"
+                    android:layout_marginTop="@dimen/dimen_40px"
+                    android:src="@mipmap/ic_integral" />
+
+                <TextView
+                    android:id="@+id/mine_property_integral_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/mine_property_integral_image"
+                    android:layout_marginLeft="@dimen/dimen_40px"
+                    android:layout_toRightOf="@id/mine_property_integral_image"
+                    android:text="@string/integral"
+                    android:textColor="@color/textGrayDeep"
+                    android:textSize="@dimen/dimen_47px" />
+
+                <TextView
+                    android:id="@+id/mine_property_integral_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@id/mine_property_integral_text"
+                    android:layout_below="@id/mine_property_integral_text"
+                    android:layout_marginTop="@dimen/dimen_20px"
+                    android:text="2000分"
+                    android:textColor="@color/textGrayLight"
+                    android:textSize="@dimen/dimen_40px" />
+
+                <View
+                    android:id="@+id/mine_property_line2"
+                    android:layout_width="@dimen/dimen_3px"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:layout_marginBottom="@dimen/dimen_40px"
+                    android:layout_marginTop="@dimen/dimen_40px"
+                    android:background="@color/edit_publis_line_color"></View>
+
+                <ImageView
+                    android:id="@+id/mine_property_coupon_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dimen_60px"
+                    android:layout_marginTop="@dimen/dimen_40px"
+                    android:layout_toRightOf="@id/mine_property_line2"
+                    android:src="@mipmap/ic_coupon" />
+
+                <TextView
+                    android:id="@+id/mine_property_coupon_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/mine_property_coupon_image"
+                    android:layout_marginBottom="@dimen/dimen_5px"
+                    android:layout_marginLeft="@dimen/dimen_40px"
+                    android:layout_toRightOf="@id/mine_property_coupon_image"
+                    android:text="@string/accounts_coupon"
+                    android:textColor="@color/textGrayDeep"
+                    android:textSize="@dimen/dimen_47px" />
+
+                <TextView
+                    android:id="@+id/mine_property_coupon_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/mine_property_integral_amount"
+                    android:layout_alignLeft="@id/mine_property_coupon_text"
+                    android:layout_alignTop="@id/mine_property_integral_amount"
+                    android:layout_below="@id/mine_property_coupon_text"
+                    android:text="1 张"
+                    android:textColor="@color/textGrayLight"
+                    android:textSize="@dimen/dimen_40px" />
+            </RelativeLayout>
         </LinearLayout>
 
     </LinearLayout>
