--- a/fanqu/src/main/res/layout/activity_mine_balance_layout.xml
+++ b/fanqu/src/main/res/layout/activity_mine_balance_layout.xml
@@ -43,6 +43,7 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/mine_membership_card_balance_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/dimen_10px"
@@ -58,7 +59,7 @@
                     android:textSize="@dimen/dimen_50px" />
 
                 <TextView
-
+                    android:id="@+id/mine_membership_card_balance_money"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
