--- a/fanqu/src/main/res/layout/activity_set_traders_password_layout.xml
+++ b/fanqu/src/main/res/layout/activity_set_traders_password_layout.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -27,114 +29,193 @@
             android:textSize="@dimen/dimen_60px" />
     </android.support.v7.widget.Toolbar>
 
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/fragment_person_bg"
-        android:orientation="vertical">
+        android:fadeScrollbars="true"
+        android:fillViewport="true">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_190px"
-            android:layout_marginLeft="@dimen/dimen_40px"
-            android:gravity="center|left"
-            android:text="@string/set_traders_password_tips"
-            android:textColor="@color/textGrayLight"
-            android:textSize="@dimen/dimen_48px" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/toolbar"
             android:background="@color/fragment_person_bg"
             android:orientation="vertical">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_200px"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/dimen_40px"
+                android:gravity="center|left"
+                android:text="@string/set_traders_password_tips"
+                android:textColor="@color/textGrayLight"
+                android:textSize="@dimen/dimen_48px" />
+
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_60px"
-                android:background="@color/white"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:gravity="center"
+                android:layout_height="match_parent"
+                android:layout_below="@id/toolbar"
+                android:background="@color/fragment_person_bg"
                 android:orientation="vertical">
 
-                <android.support.v7.widget.AppCompatEditText
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dimen_40px"
-                    android:background="@null"
-                    android:hint="@string/please_import_phone_number"
-                    android:inputType="number"
-                    android:maxLength="11"
-                    android:maxLines="1"
-                    android:paddingBottom="@dimen/dimen_60px"
-                    android:paddingTop="@dimen/dimen_60px"
-                    android:textColor="@color/textGrayDeep"
-                    android:textColorHint="@color/textGrayLight"
-                    android:textCursorDrawable="@drawable/color_cursor"
-                    android:textSize="@dimen/dimen_50px" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dimen_3px"
-                    android:layout_marginLeft="@dimen/dimen_40px"
-                    android:layout_marginRight="@dimen/dimen_40px"
-                    android:background="@color/color_EDEDED"></View>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dimen_180px">
+                    android:background="@color/white"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <android.support.v7.widget.AppCompatEditText
-                        android:id="@+id/send_code_user_pass"
+                        android:id="@+id/set_traders_password_phone_number"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="@dimen/dimen_60px"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/dimen_40px"
                         android:background="@null"
-                        android:hint="@string/input_send_code_password"
-                        android:imeOptions="actionDone"
+                        android:hint="@string/please_import_phone_number"
                         android:inputType="number"
-                        android:maxLength="6"
+                        android:maxLength="11"
                         android:maxLines="1"
-                        android:paddingRight="@dimen/dimen_23px"
+                        android:paddingBottom="@dimen/dimen_60px"
+                        android:paddingTop="@dimen/dimen_60px"
                         android:textColor="@color/textGrayDeep"
                         android:textColorHint="@color/textGrayLight"
                         android:textCursorDrawable="@drawable/color_cursor"
                         android:textSize="@dimen/dimen_50px" />
 
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dimen_3px"
+                        android:layout_marginLeft="@dimen/dimen_40px"
+                        android:layout_marginRight="@dimen/dimen_40px"
+                        android:background="@color/color_EDEDED"></View>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dimen_180px">
+
+                        <android.support.v7.widget.AppCompatEditText
+                            android:id="@+id/send_code_user_pass"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="@dimen/dimen_60px"
+                            android:background="@null"
+                            android:hint="@string/input_send_code_password"
+                            android:imeOptions="actionDone"
+                            android:inputType="number"
+                            android:maxLength="6"
+                            android:maxLines="1"
+                            android:paddingRight="@dimen/dimen_23px"
+                            android:textColor="@color/textGrayDeep"
+                            android:textColorHint="@color/textGrayLight"
+                            android:textCursorDrawable="@drawable/color_cursor"
+                            android:textSize="@dimen/dimen_50px" />
+
+
+                        <TextView
+                            android:id="@+id/send_code"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="@dimen/dimen_40px"
+                            android:clickable="true"
+                            android:drawableLeft="@mipmap/ic_vertical_wire"
+                            android:gravity="center"
+                            android:paddingLeft="@dimen/dimen_8px"
+                            android:text="@string/send_code"
+                            android:textColor="@drawable/selector_login_text"
+                            android:textSize="@dimen/dimen_50px" />
+                    </RelativeLayout>
 
                     <TextView
-                        android:id="@+id/send_code"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="@dimen/dimen_40px"
-                        android:clickable="true"
-                        android:drawableLeft="@mipmap/ic_vertical_wire"
-                        android:gravity="center"
-                        android:paddingLeft="@dimen/dimen_8px"
-                        android:text="@string/send_code"
-                        android:textColor="@drawable/selector_login_text"
-                        android:textSize="@dimen/dimen_50px" />
-                </RelativeLayout>
-            </LinearLayout>
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dimen_200px"
+                        android:layout_gravity="center"
+                        android:background="@color/fragment_person_bg"
+                        android:gravity="center|left"
+                        android:paddingLeft="@dimen/dimen_40px"
+                        android:text="@string/please_input_traders_password"
+                        android:textColor="@color/textGrayLight"
+                        android:textSize="@dimen/dimen_48px" />
 
-            <TextView
-                android:id="@+id/bound_phone_confirm_new_number"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_150px"
-                android:layout_marginLeft="@dimen/dimen_40px"
-                android:layout_marginRight="@dimen/dimen_40px"
-                android:layout_marginTop="@dimen/dimen_200px"
-                android:background="@drawable/taste_preference_confirm_select"
-                android:clickable="true"
-                android:gravity="center"
-                android:text="@string/ok"
-                android:textColor="@color/white"
-                android:textSize="@dimen/dimen_60px" />
+
+                    <com.fanqu.main.widget.PayEditPasswordText
+                        android:id="@+id/traders_password_PayEditText_pay"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dimen_180px"
+                        android:background="@null"
+                        android:cursorVisible="false"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:inputType="number"
+                        android:maxLength="6"
+                        android:paddingBottom="@dimen/dimen_50px"
+                        android:paddingTop="@dimen/dimen_50px"
+                        android:textColor="@color/textGrayDeep"
+                        android:textSize="@dimen/dimen_48px"
+                        app:VerifyBorderColor="@color/edit_publis_line_color"
+                        app:VerifyBorderWidth="@dimen/dimen_10px"
+                        app:VerifyCodeLength="6"
+                        app:VerifyCodeTextColor="@color/textGrayDeep"
+                        app:VerifyCodeTextSize="@dimen/dimen_48px" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dimen_200px"
+                        android:layout_gravity="center"
+                        android:background="@color/fragment_person_bg"
+                        android:gravity="center|left"
+                        android:paddingLeft="@dimen/dimen_40px"
+                        android:text="@string/please_ensure_input_traders_password"
+                        android:textColor="@color/textGrayLight"
+                        android:textSize="@dimen/dimen_48px" />
+
+                    <com.fanqu.main.widget.PayEditPasswordText
+                        android:id="@+id/traders_password_ensure_PayEditText_pay"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dimen_180px"
+                        android:background="@null"
+                        android:cursorVisible="false"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:inputType="number"
+                        android:maxLength="6"
+                        android:paddingBottom="@dimen/dimen_50px"
+                        android:paddingTop="@dimen/dimen_50px"
+                        android:textColor="@color/textGrayDeep"
+                        android:textSize="@dimen/dimen_48px"
+                        app:VerifyBorderColor="@color/edit_publis_line_color"
+                        app:VerifyBorderWidth="@dimen/dimen_10px"
+                        app:VerifyCodeLength="6"
+                        app:VerifyCodeTextColor="@color/textGrayDeep"
+                        app:VerifyCodeTextSize="@dimen/dimen_48px" />
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:id="@+id/confirm"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dimen_150px"
+                        android:layout_marginLeft="@dimen/dimen_40px"
+                        android:layout_marginRight="@dimen/dimen_40px"
+                        android:background="@drawable/taste_preference_confirm_select"
+                        android:clickable="true"
+                        android:gravity="center"
+                        android:text="@string/ok"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/dimen_60px" />
+                </LinearLayout>
+
+            </LinearLayout>
         </LinearLayout>
 
-    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
