第一次提交

--- a/fanqu/src/main/res/values/dimens.xml
+++ b/fanqu/src/main/res/values/dimens.xml
@@ -174,5 +174,6 @@
     <dimen name="dimen_182px">182px</dimen>
     <dimen name="dimen_366px">366px</dimen>
     <dimen name="dimen_145px">145px</dimen>
+    <dimen name="text_margin">16dp</dimen>
 
 </resources>
