--- a/fanqu/src/main/res/values/colors.xml
+++ b/fanqu/src/main/res/values/colors.xml
@@ -82,6 +82,9 @@
     <color name="color_black_B8B8B8">#B8B8B8</color>
     <color name="color_yellow_796413">#796413</color>
     <color name="color_FFEFEB">#FFEFEB</color>
+    <color name="color_FF7676">#FF7676</color>
+    <color name="color_76B6FF">#76B6FF</color>
+    <color name="color_C2C2C2">#C2C2C2</color>
 
 
 </resources>
